<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UseAppTint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.WirelessDebuggingSwitch.OneUiIntegration"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/group_connection_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/header_connection_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_connection_data"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_toStartOf="@id/button_container_copy_connection_data"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/text_connection_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.BodyMedium"
            tools:text="192.168.0.1:1234"
            android:layout_below="@id/header_connection_data"
            android:layout_toStartOf="@id/button_container_copy_connection_data"
            android:layout_marginBottom="8dp"
            android:textColor="?android:attr/textColorSecondary"/>

        <FrameLayout
            android:id="@+id/button_container_copy_connection_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_button_outlined">

            <TextView
                android:id="@+id/button_copy_connection_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:paddingHorizontal="16dp"
                android:text="@string/label_copy"
                android:clickable="true"
                android:focusable="true" />

        </FrameLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_instant_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/header_instant_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_instant_connection"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_toStartOf="@id/button_container_instant_connection"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/text_instant_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:text="@string/message_kde_connect_ready"
            android:layout_below="@id/header_instant_connection"
            android:layout_toStartOf="@id/button_container_instant_connection"
            android:layout_marginBottom="8dp"
            android:textColor="?android:attr/textColorSecondary"/>

        <FrameLayout
            android:id="@+id/button_container_instant_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_button_outlined">

            <TextView
                android:id="@+id/button_instant_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:paddingHorizontal="16dp"
                android:text="@string/label_connect"
                android:clickable="true"
                android:focusable="true" />

        </FrameLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_more_setting_in_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/title_more_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:text="@string/title_more_settings"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/icon_arrow"/>

        <TextView
            android:id="@+id/description_more_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:text="@string/message_more_settings_description"
            android:layout_toStartOf="@id/icon_arrow"
            android:layout_below="@id/title_more_settings"
            android:textColor="?android:attr/textColorSecondary"/>

        <ImageView
            android:id="@+id/icon_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/title_more_settings"
            android:layout_alignBottom="@id/description_more_settings"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:importantForAccessibility="no"
            android:src="@drawable/round_keyboard_arrow_right_24"
            android:tint="?android:attr/textColorPrimary" />

    </RelativeLayout>

</LinearLayout>
